--- a/style.css
+++ b/style.css
@@ -4,21 +4,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
     margin: 0;
-    
 }
 
 .calculator {
-    font-family: 'Times New Roman', Times, serif;
-    background-color: #d8d4d4;
+    background-color: #fff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    margin-top: 50px;
     width: 400px;
 }
 
-h1 {
+h1, h2, h3 {
     text-align: center;
     color: #333;
 }
@@ -29,13 +27,12 @@ h1 {
 
 label {
     display: block;
-    margin-bottom:10px;
+    margin-bottom: 5px;
     color: #333;
 }
 
 input {
-    width: 380px;
-    height: 10px;
+    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -43,14 +40,14 @@ input {
 }
 
 button {
-    width: 400px;
-    height: 40px;
+    width: 30%;
     padding: 10px;
     background-color: #5cb85c;
     color: #fff;
     border: none;
     border-radius: 5px;
     font-size: 16px;
+    margin-right: 5px;
     cursor: pointer;
 }
 
@@ -59,7 +56,7 @@ button:hover {
 }
 
 #results {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 #results div {
@@ -72,13 +69,13 @@ button:hover {
     color: #333;
 }
 
-.text{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: large;
+table {
+    width: 100%;
+    border-collapse: collapse;
 }
 
-hr{
-    height: 1px;
-    width: 300px;
-    margin-top: 20px;
+th, td {
+    padding: 10px;
+    border: 1px solid #ccc;
+    text-align: center;
 }
