--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: #f5efef;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,11 +9,13 @@ body {
 }
 
 .calculator {
-    background-color: #fff;
+    background-color: whitesmoke;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0,0,0,0.1);
     width: 400px;
+    height: 700px;
+    display: block;
 }
 
 h1, h2, h3 {
@@ -26,13 +28,14 @@ h1, h2, h3 {
 }
 
 label {
-    display: block;
+    /* display: block; */
     margin-bottom: 5px;
     color: #333;
+    margin-bottom: 5px;
 }
 
 input {
-    width: 100%;
+    width: 370px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -40,7 +43,7 @@ input {
 }
 
 button {
-    width: 30%;
+    width: 123px;
     padding: 10px;
     background-color: #5cb85c;
     color: #fff;
@@ -76,6 +79,33 @@ table {
 
 th, td {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #ccc  ;
     text-align: center;
+}
+
+#payments{
+    width: 255px;
+    height: 40px;
+    margin-top: 10px;
+}
+.dropdown{
+    width: 390px;
+    height: 40px;
+    text-align: center;
+    border-radius: 5px;
+    border-color: rgb(224, 221, 221);
+}
+hr{
+    width: 300px;
+    margin-top: 15px;
+}
+#label{
+    margin-top: 5px;
+}
+.class-button{
+    margin-top: -8px;
+}
+h1{
+    margin-top: 4px;
+    font-size: 30px;
 }
