--- a/style.css
+++ b/style.css
@@ -1,111 +1,83 @@
 body {
-    font-family: 'Times New Roman', Times, serif;
-    background-color: #f5efef;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #d0caca;
+  margin: 0;
+  padding: 0;
 }
 
-.calculator {
-    background-color: whitesmoke;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    width: 400px;
-    height: 700px;
-    display: block;
+.container {
+  width: 422px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(48, 45, 45, 0.1);
 }
 
-h1, h2, h3 {
-    text-align: center;
-    color: #333;
+h1,
+h2 {
+  text-align: center;
 }
 
-.form-group {
-    margin-bottom: 15px;
+.input-section {
+  margin-bottom: 20px;
 }
 
 label {
-    /* display: block; */
-    margin-bottom: 5px;
-    color: #333;
-    margin-bottom: 5px;
+  display: block;
+  margin-top: 10px;
 }
 
 input {
-    width: 370px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
+  width: 395px;
+  padding: 8px;
+  margin: 5px 0 15px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  
 }
 
 button {
-    width: 123px;
-    padding: 10px;
-    background-color: #5cb85c;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    margin-right: 5px;
-    cursor: pointer;
+  width: 160px;
+  height: 45px;
+  padding: 10px;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-top: 10px;
+  align-items: center;  
+  margin-left: 7%;
 }
 
 button:hover {
-    background-color: #4cae4c;
+  background-color: #218838;
 }
 
-#results {
-    margin-top: 20px;
-}
-
-#results div {
-    margin-bottom: 10px;
-    font-size: 18px;
-}
-
-#results span {
-    font-weight: bold;
-    color: #333;
+.result-section {
+  /* display: none; */
+  width: 100%;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
 }
 
-th, td {
-    padding: 10px;
-    border: 1px solid #ccc  ;
-    text-align: center;
+table,
+th,
+td {
+  border: 1px solid #ccc;
 }
 
-#payments{
-    width: 255px;
-    height: 40px;
-    margin-top: 10px;
+th,
+td {
+  padding: 10px;
+  text-align: center;
 }
-.dropdown{
-    width: 390px;
-    height: 40px;
-    text-align: center;
-    border-radius: 5px;
-    border-color: rgb(224, 221, 221);
-}
-hr{
-    width: 300px;
-    margin-top: 15px;
-}
-#label{
-    margin-top: 5px;
-}
-.class-button{
-    margin-top: -8px;
-}
-h1{
-    margin-top: 4px;
-    font-size: 30px;
+
+th {
+  background-color: #f2f2f2;
 }
