--- a/style.css
+++ b/style.css
@@ -38,17 +38,15 @@ input {
 }
 
 button {
-  width: 160px;
+  width: 130px;
   height: 45px;
   padding: 10px;
   background-color: #28a745;
   color: white;
   border: none;
   border-radius: 10px;
-  cursor: pointer;
-  margin-top: 10px;
-  align-items: center;  
-  margin-left: 7%;
+  cursor: pointer; 
+  margin-left: px;
 }
 
 button:hover {
@@ -56,7 +54,7 @@ button:hover {
 }
 
 .result-section {
-  /* display: none; */
+  display: none;
   width: 100%;
 }
 
